# serializer version: 1
# name: test_gateway
  dict({
    'id': 'dummy-state-id',
    'result': 'pending',
  })
# ---
# name: test_gateway.1
  dict({
    'id': 'dummy-state-id',
    'result': 'accurate',
  })
# ---
